RESOLVED FIXED25320
Crash when changing block styles in a root that contains no visible content (but contains nodes with renderers)
https://bugs.webkit.org/show_bug.cgi?id=25320
Summary Crash when changing block styles in a root that contains no visible content (...
Justin Garcia
Reported 2009-04-21 17:35:58 PDT
moveParagraphToNewBlockIfNecessary can lead to a crash if the paragraph is in an editable root that contains no visible content. <rdar://problem/6806475>
Attachments
patch (3.62 KB, patch)
2009-04-21 17:44 PDT, Justin Garcia
mitz: review+
Justin Garcia
Comment 1 2009-04-21 17:44:42 PDT
mitz
Comment 2 2009-04-21 18:25:53 PDT
Comment on attachment 29672 [details] patch r=me > \ No newline at end of file Please add a newline to the test before checking in.
Justin Garcia
Comment 3 2009-04-21 18:53:45 PDT
David Kilzer (:ddkilzer)
Comment 4 2009-05-03 17:01:49 PDT
Note You need to log in before you can comment on or make changes to this bug.