WebCore:

2009-04-21  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=25320
        Crash when changing block styles in a root that contains no visible content (but contains nodes with renderers)

        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::moveParagraphContentsToNewBlockIfNecessary): If the enclosing block is the
        root editable element and it contains no visible content, create a new block but don't try and move
        content into it, since there's nothing for moveParagraphs to move.

LayoutTests:

2009-04-21  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=25320
        Crash when changing block styles in a root that contains no visible content (but contains nodes with renderers)

        * editing/execCommand/25320-expected.txt: Added.
        * editing/execCommand/25320.html: Added.
        * platform/mac/fast/forms/caret-rtl-expected.checksum: Replaced.
        * platform/mac/fast/forms/caret-rtl-expected.txt: Replaced.



Canonical link: https://commits.webkit.org/34787@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42735 268f45cc-cd09-0410-ab3c-d52691b4dbfc